z-index fixes for overlay issues with flash message

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -525,7 +525,7 @@ section {
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 100;
+    z-index: 999;
     box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
 }
 
@@ -604,7 +604,7 @@ section {
         background: #FFFFFF;
         box-shadow: 0 2px 4px 0 rgba(0,0,0,0.20);
         position: relative;
-        z-index: 10;
+        z-index: 1;
         .sidebar-content {
             padding: 20px;
         }
@@ -656,7 +656,7 @@ section {
         position: absolute;
         top: 20px;
         right: 20px;
-        z-index: 10;
+        z-index: 1;
         background: #FFFFFF;
         box-shadow: 0 1px 4px 0 rgba(0,0,0,0.30);
         border-radius: 3px;
